crates/neon-cli/tests/snapshots/cli__a_new_campaign_plays_the_prologue_and_the_first_tutorial_steps_in_english.snap
---
source: crates/neon-cli/tests/cli.rs
expression: text
---
== N E O N   H A C K ==
Handle [Neon]: 
Welcome to the net, Neon.

Neo-Tokyo, 2087. In sector 7, acid rain makes the neon signs hum, and a toxic mist clings to the streets between the free clinics and the underground markets.
In a ten-square-meter studio, an old cyberdeck boots up on its own. The fan spins up. The screen paints the walls the color of a bruise.
Press Enter to continue, or type `skip` to go straight to the end of the introduction.
[Enter] to continue

Nexus Corp runs the city from its tower in sector 1. Down here, its Aurora Dawn clinics fit a free implant, the Halcyon, and the neighbors swear they have never rested so well.
The corporations keep the sky, the underground keeps the shadows, and the net keeps the rest. A deck, a connection and the habit of staying awake: that is all it takes to be called a hacker.
[Enter] to continue

Encrypted channel #7: incoming connection.
ECHO-7 » Finally. For the record, I'm not a corp, not a cop and not a trap. I'm ECHO-7, and yours is the only deck in sector 7 that still answers.
ECHO-7 » Handle on file: Neon. Until you earn another name, you're a rookie. Don't take it personally.
ECHO-7 » I have a first job for you. Nothing dangerous: a walk around your own deck. But first, the ropes.
Start the guided tutorial? ECHO-7 walks through the first commands, and `tutorial skip` ends it at any time. [Y/n] 
New quest: <draft>
ECHO-7 » First thing, rookie: know your tools. Ask the deck what it can do.
Tutorial, step 1 of 10: Type `help` to list the open commands.
> help
Commands
[1] help - List the commands, or explain one
[2] status - Show your situation
[3] quit - Save and leave the net
[4] quests - Show the journal, or the objectives of one quest
[5] contacts - List the contacts you know
[6] talk - Talk to a contact
[7] net - Show the map of the net, or one site
[8] hack - Start a run on a known site
[9] laylow - Lower your Notoriety with a service
[10] hint - Ask ECHO-7 for a hint
[11] save - Save the game in a slot
[12] tutorial - Show, skip or restart the guided tutorial
Objective done: <draft>
ECHO-7 » Then know your own file: handle, money, Notoriety. I keep the same three on you.
Tutorial, step 2 of 10: Type `status` to see the situation.
> status
Handle: Neon
Level: 1
Credits: 100
Notoriety: 0/100 (Discreet)
Reputation: 0
Chapter: 1
Difficulty: Normal
Quests in progress: 1
Hints left for the current quest: 3
Objective done: <draft>
ECHO-7 » Then the work. Every job ends up in the journal. According to my files, people who skip it forget who pays them.
Tutorial, step 3 of 10: Type `quests` to open the journal, then `quests m01` to read the objectives of the first quest.
> quests
== Journal ==
[1] m01 - <draft> - active - 1
Objective done: <draft>
ECHO-7 » Now talk to someone who answers. A contact is worth more than a credit, and costs less.
Tutorial, step 4 of 10: Type `talk echo7`, then pick a topic by its number. `0` leaves the conversation.
> talk echo7
Objective done: <draft>
Conversation with ECHO-7
[1] <draft>
[0] End the conversation
? 0
The conversation ends.
ECHO-7 » Next, the map. Every site you know is on it. Right now there is one, and it's yours: localhost.
Tutorial, step 5 of 10: Type `net` to see the map of the net, then `net localhost` for the file of one site.
> net
== The net ==
[1] localhost - known - 1
15 more sites still unknown.
Objective done: <draft>
ECHO-7 » First intrusion. In, take what's there, out. Start at home, where nothing bites.
Tutorial, step 6 of 10: Type `hack localhost`, then answer `y`. The run resolves by itself.
> quit
Leave the net? The game is saved. [y/N] y
Goodbye, Neon.
