crates/neon-cli/tests/snapshots/cli__a_new_campaign_plays_the_prologue_and_the_first_tutorial_steps_in_french.snap
---
source: crates/neon-cli/tests/cli.rs
expression: text
---
== N E O N   H A C K ==
Handle [Neon] : 
Bienvenue sur le réseau, Neon.

Neo-Tokyo, 2087. Dans le secteur 7, la pluie acide fait vibrer les néons et une brume toxique s'accroche aux rues, entre les cliniques gratuites et les marchés souterrains.
Dans un studio de dix mètres carrés, un vieux cyberdeck se rallume tout seul. Le ventilateur s'emballe. L'écran peint les murs de la couleur d'un hématome.
Appuyer sur Entrée pour continuer, ou taper `skip` pour aller directement à la fin de l'introduction.
[Entrée] pour continuer

Nexus Corp dirige la ville depuis sa tour du secteur 1. Ici, ses cliniques Aurora Dawn posent gratuitement un implant, le Halcyon, et les voisins jurent n'avoir jamais aussi bien dormi.
Les corporations tiennent le ciel, l'underground tient l'ombre, et le réseau tient le reste. Un deck, une connexion et l'habitude de veiller tard : il n'en faut pas plus pour devenir hacker.
[Entrée] pour continuer

Canal chiffré #7 : connexion entrante.
ECHO-7 » Enfin. Pour mémoire, je ne suis ni une corporation, ni un flic, ni un piège. Je suis ECHO-7, et le tien est le seul deck du secteur 7 qui répond encore.
ECHO-7 » Handle en dossier : Neon. Tant que tu n'as pas gagné un autre nom, tu es un rookie. Ne le prends pas mal.
ECHO-7 » J'ai un premier travail pour toi. Rien de dangereux : un tour du propriétaire sur ton propre deck. Mais d'abord, les bases.
Lancer le tutoriel guidé ? ECHO-7 passe en revue les premières commandes, et `tutorial skip` y met fin à tout moment. [O/n] 
Nouvelle quête : <draft>
ECHO-7 » Première chose, rookie : connaître ses outils. Demande au deck ce qu'il sait faire.
Tutoriel, étape 1 sur 10 : Taper `help` pour lister les commandes ouvertes.
> help
Commandes
[1] help - Lister les commandes, ou en expliquer une
[2] status - Voir la situation
[3] quit - Sauvegarder et quitter le réseau
[4] quests - Voir le journal, ou les objectifs d'une quête
[5] contacts - Lister les contacts connus
[6] talk - Parler à un contact
[7] net - Cartographier le réseau, ou détailler un site
[8] hack - Lancer une intrusion sur un site connu
[9] laylow - Baisser la Notoriété avec un service
[10] hint - Demander un indice à ECHO-7
[11] save - Sauvegarder la partie dans un emplacement
[12] tutorial - Afficher, ignorer ou relancer le tutoriel guidé
Objectif atteint : <draft>
ECHO-7 » Ensuite, ton propre dossier : handle, argent, Notoriété. J'ai les mêmes trois sur toi.
Tutoriel, étape 2 sur 10 : Taper `status` pour voir la situation.
> status
Handle : Neon
Niveau : 1
Crédits : 100
Notoriété : 0/100 (Discret)
Réputation : 0
Chapitre : 1
Difficulté : Normal
Quêtes en cours : 1
Indices restants pour la quête en cours : 3
Objectif atteint : <draft>
ECHO-7 » Ensuite, le travail. Chaque boulot finit dans le journal. D'après mes archives, ceux qui le négligent oublient qui les paie.
Tutoriel, étape 3 sur 10 : Taper `quests` pour ouvrir le journal, puis `quests m01` pour lire les objectifs de la première quête.
> quests
== Journal ==
[1] m01 - <draft> - en cours - 1
Objectif atteint : <draft>
ECHO-7 » Maintenant, parle à quelqu'un qui répond. Un contact vaut plus qu'un crédit, et coûte moins.
Tutoriel, étape 4 sur 10 : Taper `talk echo7`, puis choisir un sujet par son numéro. `0` met fin à la conversation.
> talk echo7
Objectif atteint : <draft>
Conversation avec ECHO-7
[1] <draft>
[0] Mettre fin à la conversation
? 0
La conversation prend fin.
ECHO-7 » La carte, ensuite. Chaque site connu y figure. Pour l'instant il n'y en a qu'un, et c'est le tien : localhost.
Tutoriel, étape 5 sur 10 : Taper `net` pour cartographier le réseau, puis `net localhost` pour détailler un site.
> net
== Le réseau ==
[1] localhost - connu - 1
15 autres sites encore inconnus.
Objectif atteint : <draft>
ECHO-7 » Première intrusion. Entrer, prendre ce qu'il y a, sortir. On commence à la maison, là où rien ne mord.
Tutoriel, étape 6 sur 10 : Taper `hack localhost`, puis répondre `o`. L'intrusion se règle toute seule.
> quit
Quitter le réseau ? La partie est sauvegardée. [o/N] y
À bientôt, Neon.
