crates/neon-cli/tests/snapshots/cli__a_whole_game_lost_to_reckless_scanning.snap
---
source: crates/neon-cli/tests/cli.rs
expression: text
---
== N E O N   H A C K ==
On the screen, a single line: ENCRYPTED CHANNEL #7 - INCOMING CONNECTION.
[Enter] to continue

Your handle [Case]: Neon
Carve "Neon" into the net? [Y/n] y
ECHO-7 » Finally. I was starting to think you would never wake up, Neon.
ECHO-7 » Your target is the deck upgrade at R4Z0R's stall. Keep your trace down while you earn it.
ECHO-7 » Type 'help' to see what you can do.
> scan
The scan finds 4 open ports.
[Reward] +8 credits.
Trace +20 (0 → 20, calm).
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +25 (20 → 45, tense).
[ALERT] Security has noticed you.
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +25 (45 → 70, critical).
[ALERT] Security is closing in: your trace is critical.
> scan
The scan finds 3 open ports.
[Reward] +6 credits.
Trace +15 (70 → 85, critical).
> scan
The scan finds 1 open port.
[Reward] +2 credits.
Trace +5 (85 → 90, critical).
> scan
The scan finds 2 open ports.
[Reward] +4 credits.
Trace +10 (90 → 100, critical).
[ALERT] Security traced you. The connection is cut and the deck is bricked.
Run the game again to resume from your last save.
