crates/neon-cli/tests/snapshots/cli__a_whole_game_won_reads_the_same_in_english.snap
---
source: crates/neon-cli/tests/cli.rs
expression: "transcript(&[], WINNING_GAME)"
---
== N E O N   H A C K ==
On the screen, a single line: ENCRYPTED CHANNEL #7 - INCOMING CONNECTION.
[Enter] to continue

Your handle [Case]: Neon
Carve "Neon" into the net? [Y/n] y
ECHO-7 » Finally. I was starting to think you would never wake up, Neon.
ECHO-7 » Your target is the deck upgrade at R4Z0R's stall. Keep your trace down while you earn it.
ECHO-7 » Type 'help' to see what you can do.
> scan
The scan finds 4 open ports.
[Reward] +8 credits.
Trace +20 (0 → 20, calm).
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +25 (20 → 45, tense).
[ALERT] Security has noticed you.
> laylow
You go dark for a while. The trail cools.
Trace -25 (45 → 20, calm).
> shop
R4Z0R's stall
[1] Proxy chain (30 credits)
[2] Cloak module (60 credits)
[3] Deck upgrade (120 credits) (52 credits short.)
[0] Leave the stall
? cloak
[Reward] You bought the cloak module.
R4Z0R's stall
[1] Proxy chain (30 credits) (22 credits short.)
[2] Cloak module (60 credits) (You already own it.)
[3] Deck upgrade (120 credits) (112 credits short.)
[0] Leave the stall
? 0
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +13 (20 → 33, tense).
[ALERT] Security has noticed you.
> scan
The scan finds 3 open ports.
[Reward] +6 credits.
Trace +8 (33 → 41, tense).
> scan
The scan finds 1 open port.
[Reward] +2 credits.
Trace +3 (41 → 44, tense).
> scan
The scan finds 2 open ports.
[Reward] +4 credits.
Trace +5 (44 → 49, tense).
> laylow
You go dark for a while. The trail cools.
Trace -25 (49 → 24, calm).
> scan
The scan finds 4 open ports.
[Reward] +8 credits.
Trace +10 (24 → 34, tense).
[ALERT] Security has noticed you.
> scan
The scan finds 3 open ports.
[Reward] +6 credits.
Trace +8 (34 → 42, tense).
> scan
The scan finds 4 open ports.
[Reward] +8 credits.
Trace +10 (42 → 52, tense).
> laylow
You go dark for a while. The trail cools.
Trace -25 (52 → 27, calm).
> scan
The scan finds 2 open ports.
[Reward] +4 credits.
Trace +5 (27 → 32, tense).
[ALERT] Security has noticed you.
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +13 (32 → 45, tense).
> laylow
You go dark for a while. The trail cools.
Trace -25 (45 → 20, calm).
> scan
The scan finds 2 open ports.
[Reward] +4 credits.
Trace +5 (20 → 25, calm).
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +13 (25 → 38, tense).
[ALERT] Security has noticed you.
> scan
The scan finds 4 open ports.
[Reward] +8 credits.
Trace +10 (38 → 48, tense).
> laylow
You go dark for a while. The trail cools.
Trace -25 (48 → 23, calm).
> scan
The scan finds 1 open port.
[Reward] +2 credits.
Trace +3 (23 → 26, calm).
> scan
The scan finds 2 open ports.
[Reward] +4 credits.
Trace +5 (26 → 31, tense).
[ALERT] Security has noticed you.
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +13 (31 → 44, tense).
> scan
The scan finds 5 open ports.
[Reward] +10 credits.
Trace +13 (44 → 57, tense).
> laylow
You go dark for a while. The trail cools.
Trace -25 (57 → 32, tense).
> scan
The scan finds 2 open ports.
[Reward] +4 credits.
Trace +5 (32 → 37, tense).
> scan
The scan finds 1 open port.
[Reward] +2 credits.
Trace +3 (37 → 40, tense).
> shop
R4Z0R's stall
[1] Proxy chain (30 credits)
[2] Cloak module (60 credits) (You already own it.)
[3] Deck upgrade (120 credits)
[0] Leave the stall
? deck
[Reward] You bought the deck upgrade.
ECHO-7 » That deck is yours. The net is wide open now, Neon. See you inside.
[Reward] Mission complete in 28 actions, 0 credits left.
