crates/neon-cli/tests/snapshots/cli__the_first_look_at_the_hub_reads_the_same_in_english.snap
---
source: crates/neon-cli/tests/cli.rs
expression: "campaign(&[], FIRST_LOOK)"
---
== N E O N   H A C K ==
Handle [Neon]: 
Welcome to the net, Neon.

Neo-Tokyo, 2087. In sector 7, acid rain makes the neon signs hum, and a toxic mist clings to the streets between the free clinics and the underground markets.
In a ten-square-meter studio, an old cyberdeck boots up on its own. The fan spins up. The screen paints the walls the color of a bruise.
Press Enter to continue, or type `skip` to go straight to the end of the introduction.
[Enter] to continue

Nexus Corp runs the city from its tower in sector 1. Down here, its Aurora Dawn clinics fit a free implant, the Halcyon, and the neighbors swear they have never rested so well.
The corporations keep the sky, the underground keeps the shadows, and the net keeps the rest. A deck, a connection and the habit of staying awake: that is all it takes to be called a hacker.
[Enter] to continue

Encrypted channel #7: incoming connection.
ECHO-7 » Finally. For the record, I'm not a corp, not a cop and not a trap. I'm ECHO-7, and yours is the only deck in sector 7 that still answers.
ECHO-7 » Handle on file: Neon. Until you earn another name, you're a rookie. Don't take it personally.
ECHO-7 » I have a first job for you. Nothing dangerous: a walk around your own deck. But first, the ropes.
Start the guided tutorial? ECHO-7 walks through the first commands, and `tutorial skip` ends it at any time. [Y/n] n
Tutorial skipped. `tutorial restart` starts it later.
New quest: First Steps in the Shadows
Type `help` to list the commands, then `quests` to read the first quest.
> help
Commands
[1] help - List the commands, or explain one
[2] status - Show your situation
[3] quit - Save and leave the net
[4] quests - Show the journal, or the objectives of one quest
[5] contacts - List the contacts you know
[6] talk - Talk to a contact
[7] net - Show the map of the net, or one site
[8] hack - Start a run on a known site
[9] laylow - Lower your Notoriety with a service
[10] hint - Ask ECHO-7 for a hint
[11] save - Save the game in a slot
[12] tutorial - Show, skip or restart the guided tutorial
Objective done: Read the help (help)
> status
Handle: Neon
Level: 1
Credits: 100
Notoriety: 0/100 (Discreet)
Reputation: 0
Chapter: 1
Difficulty: Normal
Quests in progress: 1
Hints left for the current quest: 3
Objective done: Check the status sheet (status)
> quests
== Journal ==
[1] m01 - First Steps in the Shadows - active - 1
Objective done: Open the journal (quests)
> contacts
== Contacts ==
[1] echo7 - ECHO-7 - friendly - available - -
> net
== The net ==
[1] localhost - known - 1
15 more sites still unknown.
Objective done: Explore the net (net)
> shop
[Error] Not yet: find R4Z0R.
> messages
[Error] Not yet: wait for a first message.
> bogus
[Error] Unknown command: bogus. See `help`.
> quit
Leave the net? The game is saved. [y/N] y
Goodbye, Neon.
