crates/neon-cli/tests/snapshots/cli__the_first_look_at_the_hub_reads_the_same_in_french.snap
---
source: crates/neon-cli/tests/cli.rs
expression: text
---
== N E O N   H A C K ==
Handle [Neon] : 
Bienvenue sur le réseau, Neon.
Nouvelle quête : <draft>
Taper `help` pour lister les commandes, puis `quests` pour lire la première quête.
> help
Commandes
[1] help - Lister les commandes, ou en expliquer une
[2] status - Voir la situation
[3] quit - Sauvegarder et quitter le réseau
[4] quests - Voir le journal, ou les objectifs d'une quête
[5] contacts - Lister les contacts connus
[6] talk - Parler à un contact
[7] net - Cartographier le réseau, ou détailler un site
[8] hack - Lancer une intrusion sur un site connu
[9] laylow - Baisser la Notoriété avec un service
[10] hint - Demander un indice à ECHO-7
[11] save - Sauvegarder la partie dans un emplacement
Objectif atteint : <draft>
> status
Handle : Neon
Niveau : 1
Crédits : 100
Notoriété : 0/100 (Discret)
Réputation : 0
Chapitre : 1
Difficulté : Normal
Quêtes en cours : 1
Indices restants pour la quête en cours : 3
Objectif atteint : <draft>
> quests
== Journal ==
[1] m01 - <draft> - en cours - 1
Objectif atteint : <draft>
> contacts
== Contacts ==
[1] echo7 - ECHO-7 - amical - disponible - -
> net
== Le réseau ==
[1] localhost - connu - 1
15 autres sites encore inconnus.
Objectif atteint : <draft>
> shop
[Erreur] Pas encore : trouver R4Z0R.
> messages
[Erreur] Pas encore : attendre un premier message.
> bogus
[Erreur] Commande inconnue : bogus. Voir `help`.
> quit
Quitter le réseau ? La partie est sauvegardée. [o/N] y
À bientôt, Neon.
