crates/neon-cli/tests/snapshots/cli__the_first_look_with_the_screen_reader_and_ascii_modes-2.snap
---
source: crates/neon-cli/tests/cli.rs
expression: ascii
---
NEON HACK
Handle [Neon] : 
Bienvenue sur le reseau, Neon.

Neo-Tokyo, 2087. Dans le secteur 7, la pluie acide fait vibrer les neons et une brume toxique s'accroche aux rues, entre les cliniques gratuites et les marches souterrains.
Dans un studio de dix metres carres, un vieux cyberdeck se rallume tout seul. Le ventilateur s'emballe. L'ecran peint les murs de la couleur d'un hematome.
Appuyer sur Entree pour continuer, ou taper `skip` pour aller directement a la fin de l'introduction.
[Entree] pour continuer

Nexus Corp dirige la ville depuis sa tour du secteur 1. Ici, ses cliniques Aurora Dawn posent gratuitement un implant, le Halcyon, et les voisins jurent n'avoir jamais aussi bien dormi.
Les corporations tiennent le ciel, l'underground tient l'ombre, et le reseau tient le reste. Un deck, une connexion et l'habitude de veiller tard : il n'en faut pas plus pour devenir hacker.
[Entree] pour continuer

Canal chiffre #7 : connexion entrante.
ECHO-7: Enfin. Pour memoire, je ne suis ni une corporation, ni un flic, ni un piege. Je suis ECHO-7, et le tien est le seul deck du secteur 7 qui repond encore.
ECHO-7: Handle en dossier : Neon. Tant que tu n'as pas gagne un autre nom, tu es un rookie. Ne le prends pas mal.
ECHO-7: J'ai un premier travail pour toi. Rien de dangereux : un tour du proprietaire sur ton propre deck. Mais d'abord, les bases.
Lancer le tutoriel guide ? ECHO-7 passe en revue les premieres commandes, et `tutorial skip` y met fin a tout moment. [O/n] n
Tutoriel ignore. `tutorial restart` le lance plus tard.
Nouvelle quete : Premiers Pas dans l'Ombre
Taper `help` pour lister les commandes, puis `quests` pour lire la premiere quete.
> help
Commandes
[1] help - Lister les commandes, ou en expliquer une
[2] status - Voir la situation
[3] quit - Sauvegarder et quitter le reseau
[4] quests - Voir le journal, ou les objectifs d'une quete
[5] contacts - Lister les contacts connus
[6] talk - Parler a un contact
[7] net - Cartographier le reseau, ou detailler un site
[8] hack - Lancer une intrusion sur un site connu
[9] laylow - Baisser la Notoriete avec un service
[10] hint - Demander un indice a ECHO-7
[11] save - Sauvegarder la partie dans un emplacement
[12] tutorial - Afficher, ignorer ou relancer le tutoriel guide
Objectif atteint : Lire l'aide (help)
> status
Handle : Neon
Niveau : 1
Credits : 100
Notoriete : 0/100 (Discret)
Reputation : 0
Chapitre : 1
Difficulte : Normal
Quetes en cours : 1
Indices restants pour la quete en cours : 3
Objectif atteint : Consulter la fiche d'etat (status)
> quests
== Journal ==
[1] m01 - Premiers Pas dans l'Ombre - en cours - 1
Objectif atteint : Ouvrir le journal (quests)
> contacts
== Contacts ==
[1] echo7 - ECHO-7 - amical - disponible - -
> net
== Le reseau ==
[1] localhost - connu - 1
15 autres sites encore inconnus.
Objectif atteint : Explorer le reseau (net)
> shop
[Erreur] Pas encore : trouver R4Z0R.
> messages
[Erreur] Pas encore : attendre un premier message.
> bogus
[Erreur] Commande inconnue : bogus. Voir `help`.
> quit
Quitter le reseau ? La partie est sauvegardee. [o/N] y
A bientot, Neon.
