crates/neon-cli/tests/snapshots/cli__the_first_look_with_the_screen_reader_and_ascii_modes-3.snap
---
source: crates/neon-cli/tests/cli.rs
expression: both
---
Handle [Neon] : 
Bienvenue sur le reseau, Neon.
Nouvelle quete : <draft>
Taper `help` pour lister les commandes, puis `quests` pour lire la premiere quete.
> help
Commandes
1. Commande : help; Effet : Lister les commandes, ou en expliquer une
2. Commande : status; Effet : Voir la situation
3. Commande : quit; Effet : Sauvegarder et quitter le reseau
4. Commande : quests; Effet : Voir le journal, ou les objectifs d'une quete
5. Commande : contacts; Effet : Lister les contacts connus
6. Commande : talk; Effet : Parler a un contact
7. Commande : net; Effet : Cartographier le reseau, ou detailler un site
8. Commande : hack; Effet : Lancer une intrusion sur un site connu
9. Commande : laylow; Effet : Baisser la Notoriete avec un service
10. Commande : hint; Effet : Demander un indice a ECHO-7
11. Commande : save; Effet : Sauvegarder la partie dans un emplacement
Objectif atteint : <draft>
> status
Handle : Neon
Niveau : 1
Credits : 100
Notoriete : 0/100 (Discret)
Reputation : 0
Chapitre : 1
Difficulte : Normal
Quetes en cours : 1
Indices restants pour la quete en cours : 3
Objectif atteint : <draft>
> quests
== Journal ==
1. id : m01; titre : <draft>; statut : en cours; chapitre : 1
Objectif atteint : <draft>
> contacts
== Contacts ==
1. id : echo7; nom : ECHO-7; relation : amical; etat : disponible; offres : -
> net
== Le reseau ==
1. nom : localhost; statut : connu; niveau : 1
15 autres sites encore inconnus.
Objectif atteint : <draft>
> shop
[Erreur] Pas encore : trouver R4Z0R.
> messages
[Erreur] Pas encore : attendre un premier message.
> bogus
[Erreur] Commande inconnue : bogus. Voir `help`.
> quit
Quitter le reseau ? La partie est sauvegardee. [o/N] y
A bientot, Neon.
