crates/neon-cli/tests/snapshots/cli__the_first_look_with_the_screen_reader_and_ascii_modes.snap
---
source: crates/neon-cli/tests/cli.rs
expression: reader
---
Handle [Neon]: 
Welcome to the net, Neon.
New quest: <draft>
Type `help` to list the commands, then `quests` to read the first quest.
> help
Commands
1. Command: help; Effect: List the commands, or explain one
2. Command: status; Effect: Show your situation
3. Command: quit; Effect: Save and leave the net
4. Command: quests; Effect: Show the journal, or the objectives of one quest
5. Command: contacts; Effect: List the contacts you know
6. Command: talk; Effect: Talk to a contact
7. Command: net; Effect: Show the map of the net, or one site
8. Command: hack; Effect: Start a run on a known site
9. Command: laylow; Effect: Lower your Notoriety with a service
10. Command: hint; Effect: Ask ECHO-7 for a hint
11. Command: save; Effect: Save the game in a slot
Objective done: <draft>
> status
Handle: Neon
Level: 1
Credits: 100
Notoriety: 0/100 (Discreet)
Reputation: 0
Chapter: 1
Difficulty: Normal
Quests in progress: 1
Hints left for the current quest: 3
Objective done: <draft>
> quests
== Journal ==
1. id: m01; title: <draft>; status: active; chapter: 1
Objective done: <draft>
> contacts
== Contacts ==
1. id: echo7; name: ECHO-7; relation: friendly; state: available; offers: -
> net
== The net ==
1. name: localhost; status: known; level: 1
15 more sites still unknown.
Objective done: <draft>
> shop
[Error] Not yet: find R4Z0R.
> messages
[Error] Not yet: wait for a first message.
> bogus
[Error] Unknown command: bogus. See `help`.
> quit
Leave the net? The game is saved. [y/N] y
Goodbye, Neon.
