crates/neon-cli/tests/snapshots/cli__the_prologue_reads_the_same_with_the_screen_reader_and_ascii_modes-2.snap
---
source: crates/neon-cli/tests/cli.rs
expression: ascii
---
NEON HACK
Handle [Neon] : 
Bienvenue sur le reseau, Neon.

Neo-Tokyo, 2087. Dans le secteur 7, la pluie acide fait vibrer les neons et une brume toxique s'accroche aux rues, entre les cliniques gratuites et les marches souterrains.
Dans un studio de dix metres carres, un vieux cyberdeck se rallume tout seul. Le ventilateur s'emballe. L'ecran peint les murs de la couleur d'un hematome.
Appuyer sur Entree pour continuer, ou taper `skip` pour aller directement a la fin de l'introduction.
[Entree] pour continuer

Nexus Corp dirige la ville depuis sa tour du secteur 1. Ici, ses cliniques Aurora Dawn posent gratuitement un implant, le Halcyon, et les voisins jurent n'avoir jamais aussi bien dormi.
Les corporations tiennent le ciel, l'underground tient l'ombre, et le reseau tient le reste. Un deck, une connexion et l'habitude de veiller tard : il n'en faut pas plus pour devenir hacker.
[Entree] pour continuer

Canal chiffre #7 : connexion entrante.
ECHO-7: Enfin. Pour memoire, je ne suis ni une corporation, ni un flic, ni un piege. Je suis ECHO-7, et le tien est le seul deck du secteur 7 qui repond encore.
ECHO-7: Handle en dossier : Neon. Tant que tu n'as pas gagne un autre nom, tu es un rookie. Ne le prends pas mal.
ECHO-7: J'ai un premier travail pour toi. Rien de dangereux : un tour du proprietaire sur ton propre deck. Mais d'abord, les bases.
Lancer le tutoriel guide ? ECHO-7 passe en revue les premieres commandes, et `tutorial skip` y met fin a tout moment. [O/n] 
Nouvelle quete : <draft>
ECHO-7: Premiere chose, rookie : connaitre ses outils. Demande au deck ce qu'il sait faire.
Tutoriel, etape 1 sur 10 : Taper `help` pour lister les commandes ouvertes.
> help
Commandes
[1] help - Lister les commandes, ou en expliquer une
[2] status - Voir la situation
[3] quit - Sauvegarder et quitter le reseau
[4] quests - Voir le journal, ou les objectifs d'une quete
[5] contacts - Lister les contacts connus
[6] talk - Parler a un contact
[7] net - Cartographier le reseau, ou detailler un site
[8] hack - Lancer une intrusion sur un site connu
[9] laylow - Baisser la Notoriete avec un service
[10] hint - Demander un indice a ECHO-7
[11] save - Sauvegarder la partie dans un emplacement
[12] tutorial - Afficher, ignorer ou relancer le tutoriel guide
Objectif atteint : <draft>
ECHO-7: Ensuite, ton propre dossier : handle, argent, Notoriete. J'ai les memes trois sur toi.
Tutoriel, etape 2 sur 10 : Taper `status` pour voir la situation.
> quit
Quitter le reseau ? La partie est sauvegardee. [o/N] y
A bientot, Neon.
